--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -30,6 +30,7 @@ flutter:
   assets:
    - assets/images/star.png
    - assets/images/star_stroke.png
+   - assets/images/icy_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
